unpackaged/main/default/objects/Opportunity/fields/Days_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Days_Purchased__c</fullName>
    <description>Based on quantity of Opportunity Products that are not zero-rated</description>
    <label>Days Purchased</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Total_Sale_Price__c</field>
        <operation>notEqual</operation>
        <value>0.00</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>