unpackaged/main/default/objects/Opportunity/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <formula>Majenta_Discount__c / List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>