unpackaged/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The company division the opportunity falls under.</description>
    <inlineHelpText>The company division the opportunity falls under.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Services</fullName>
                <color>#78C953</color>
                <label>Data Services</label>
            </value>
            <value>
                <fullName>Dassault</fullName>
                <color>#A53711</color>
                <label>Dassault</label>
            </value>
            <value>
                <fullName>Consultants</fullName>
                <color>#993399</color>
                <label>Consultants</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>EnerjyHub</fullName>
                <label>enerjyhub</label>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>