unpackaged/main/default/objects/Opportunity/fields/DS_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>DS_Forecast_Category__c</fullName>
    <formula>Case(StageName,
"Disengaged", "Lost", 
"Maintenance Cancelled", "Lost", 
"Order Lost / Disengaged", "Lost", 
"Quoted", "Upside", 
"Upside (Best case)", "Upside",
"Committed", "Commit", 
"Will Renew", "Commit", 
"Order In - Processing", "Safe", 
"Order In - Processed", "Won", 
"Order In", "Won", 
"Completed", "Won",
"Pipeline (Qualified opportunity)", "Pipeline (Qualified opportunity)",
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dassault Forecast Category</label>
    <type>Text</type>
</CustomField>