unpackaged/main/default/objects/Opportunity/fields/DS_Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>DS_Lead_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DS Lead Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The selected contact must be on the same account as the Opportunity account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (DS Lead Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>