unpackaged/main/default/objects/Opportunity/fields/DS_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>DS_Lead_ID__c</fullName>
    <label>Dassault Lead ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>