unpackaged/main/default/objects/Opportunity/fields/DS_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>DS_Net_Revenue__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dassault Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>