unpackaged/main/default/objects/Opportunity/fields/DS_Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>DS_Offer_Name__c</fullName>
    <description>Dassault Offer Name field for Partner Pipeline Export to Dassault</description>
    <label>Dassault Offer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3DEXCITE_3DEXCITE DELTAGEN_On_Premise</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Design/Engineering_On_Premise</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Manufacturing/Production_On_Premise</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Private Cloud Design/Engineering_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Private Cloud Governance/Lifecycle_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Private Cloud Manufacturing/Production_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Private Cloud Simulation_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Public Cloud Design/Engineering_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Public Cloud for Academia_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Public Cloud Governance/Lifecycle_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Public Cloud Manufacturing/Production_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Public Cloud Simulation_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>3DEXPERIENCE_Simulation_On_Premise</fullName>
            </value>
            <value>
                <fullName>3DVIA_3DVIA Studio Pro_On_Premise</fullName>
            </value>
            <value>
                <fullName>3DVIA_3DVIA Virtools_On_Premise</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_Academia CATIA EDU V5_On_Premise</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_Academia DELMIA EDU V5_On_Premise</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_Academia ENOVIA SMARTEAM EDU V5_On_Premise</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_Dymola Academic Learn/Innovate_On_Premise</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_ICEM Surf for Academia _On_Premise</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_Public Cloud for Academia_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>ACADEMIA_V6 for Academia_On_Premise</fullName>
            </value>
            <value>
                <fullName>AD_Co-design to target_On_Premise</fullName>
            </value>
            <value>
                <fullName>AD_Engineered to Fly for Mid-Market_On_Premise</fullName>
            </value>
            <value>
                <fullName>AD_Engineered to Fly for Mid-Market_Public_Cloud</fullName>
            </value>
            <value>
                <fullName>AD_Engineered to Fly_On_Premise</fullName>
            </value>
            <value>
                <fullName>AD_Test To perform_On_Premise</fullName>
            </value>
            <value>
                <fullName>AD_Winning Program_On_Premise</fullName>
            </value>
            <value>
                <fullName>AEC_Civil Design for Fabrication_On_Premise</fullName>
            </value>
            <value>
                <fullName>AEC_Civil Design for Fabrication_Public_Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>