unpackaged/main/default/objects/Opportunity/fields/DS_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>DS_Opportunity_ID__c</fullName>
    <description>DS Opportunity ID provided for DS Driven Marketing</description>
    <label>DS Opportunity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>