unpackaged/main/default/objects/Opportunity/fields/DS_PPIT_Revenue__c.field-meta.xml
<CustomField>
    <fullName>DS_PPIT_Revenue__c</fullName>
    <label>DS PPIT Revenue</label>
    <summarizedField>OpportunityLineItem.Total_Buy__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family_ro__c</field>
        <operation>equals</operation>
        <value>Dassault</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.DS_Type__c</field>
        <operation>equals</operation>
        <value>PLC, PSC, QLC, QSC, TBL2, TBL3, TCS3, YLC, YSC</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>