unpackaged/main/default/objects/Opportunity/fields/DS_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>DS_Revenue_Type__c</fullName>
    <label>Dassault Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLC</fullName>
                <default>true</default>
                <label>PLC</label>
            </value>
            <value>
                <fullName>YLC</fullName>
            </value>
            <value>
                <fullName>QLC</fullName>
            </value>
            <value>
                <fullName>ALC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>