unpackaged/main/default/objects/Opportunity/fields/DS_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>DS_Sales_Stage__c</fullName>
    <formula>Case(StageName, 
"Disengaged", "Closed/Lost",
"Maintenance Cancelled", "Closed/Lost",
"Order Lost / Disengaged", "Closed/Lost",
"Pipeline (Unqualified Opportunity)", null,
"Pipeline (Qualified opportunity)", "1-Sales Lead", 
"Quoted", "2-Validate Opportunity",
"Upside (Best case)", "2-Validate Opportunity",
"Committed", "3-Establish Value",
"Will Renew", "3-Establish Value",
"Order In - Processing", "4-Reach Agreement",
"Order In - Processed", "Closed/Won",
"Order In", "Closed/Won", 
"Completed", "Closed/Won", 
null)</formula>
    <label>Dassault Sales Stage</label>
    <type>Text</type>
</CustomField>