unpackaged/main/default/objects/Opportunity/fields/DS_Site_ID2__c.field-meta.xml
<CustomField>
    <fullName>DS_Site_ID2__c</fullName>
    <formula>Account.Dassault_Site_ID__c</formula>
    <label>Dassault Site ID</label>
    <type>Text</type>
</CustomField>