unpackaged/main/default/objects/Opportunity/fields/enerjyhubTypeTrig__c.field-meta.xml
<CustomField>
    <fullName>enerjyhubTypeTrig__c</fullName>
    <label>enerjyhubTypeTrig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>