unpackaged/main/default/objects/Opportunity/fields/EstimatedNextInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedNextInvoiceAmount__c</fullName>
    <formula>IF(LastInvoiceDate__c == FirstInvoiceDate__c,
  TotalAmountInvoiced__c,
  (TotalAmountInvoiced__c - TotalAmountCredited__c) / 
  ROUND(
    ROUND(
      (LastInvoiceDate__c - FirstInvoiceDate__c) / 30.25 + BillingCycleMonths__c , 0
    ) / BillingCycleMonths__c , 0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Next Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>