unpackaged/main/default/objects/Opportunity/fields/Expected_Margin__c.field-meta.xml
<CustomField>
    <fullName>Expected_Margin__c</fullName>
    <formula>Margin_Calc__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>