unpackaged/main/default/objects/Opportunity/fields/ExpensesRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpensesRevenue__c</fullName>
    <label>Expenses</label>
    <summarizedField>OpportunityLineItem.Total_Sale_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductSubtype_ro__c</field>
        <operation>equals</operation>
        <value>Expenses</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>