unpackaged/main/default/objects/Opportunity/fields/Final_Net_Cost_of_Financing__c.field-meta.xml
<CustomField>
    <fullName>Final_Net_Cost_of_Financing__c</fullName>
    <formula>Net_Cost_of_Financing__c + 7343</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Net Cost of Financing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>