unpackaged/main/default/objects/Opportunity/fields/FinancialTermsPick__c.field-meta.xml
<CustomField>
    <fullName>FinancialTermsPick__c</fullName>
    <description>Established mutually agreed to commercial pricing terms for closing business</description>
    <inlineHelpText>PROCESS ALIGNMENT: Established mutually agreed to commercial pricing terms for closing business</inlineHelpText>
    <label>Financial Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>