unpackaged/main/default/objects/Opportunity/fields/First_Order_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Year__c</fullName>
    <formula>TEXT(YEAR(FirstInvoiceDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Order Year</label>
    <type>Text</type>
</CustomField>