unpackaged/main/default/objects/Opportunity/fields/FirstInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>FirstInvoiceDate__c</fullName>
    <label>First Invoice Date</label>
    <summarizedField>Invoice__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.IsInvoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.NetAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>