unpackaged/main/default/objects/Opportunity/fields/Forecast_Stage__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Stage__c</fullName>
    <formula>IF(Probability &lt;= 0, 'Lost',
  IF(Probability &lt;= 0.4, '10-40%' &amp; BR() &amp; 'Pipeline',
    IF(Probability &lt;= 0.6, '50-60%' &amp; BR() &amp; 'Best Case',
      IF(Probability &lt;= 0.9, '70-90%' &amp; BR() &amp; 'Committed',
        IF(Probability &lt;= 1.0, 'Won', 'ERROR')
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Stage</label>
    <type>Text</type>
</CustomField>