unpackaged/main/default/objects/Opportunity/fields/FundingPick__c.field-meta.xml
<CustomField>
    <fullName>FundingPick__c</fullName>
    <description>Validated the funding source (internal or external) &amp; capital acquisition is approved</description>
    <inlineHelpText>EXECUTIVE ALIGNMENT: Validated the funding source (internal or external) &amp; capital acquisition is approved</inlineHelpText>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>