unpackaged/main/default/objects/Opportunity/fields/Hardware_Platform__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Platform__c</fullName>
    <label>Hardware Platform</label>
    <length>200</length>
    <type>Text</type>
</CustomField>