unpackaged/main/default/objects/Opportunity/fields/HardwareMargin__c.field-meta.xml
<CustomField>
    <fullName>HardwareMargin__c</fullName>
    <label>Hardware Margin</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type_ro__c</field>
        <operation>equals</operation>
        <value>Hardware</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>