unpackaged/main/default/objects/Opportunity/fields/HardwareRevenue__c.field-meta.xml
<CustomField>
    <fullName>HardwareRevenue__c</fullName>
    <label>Hardware Revenue</label>
    <summarizedField>OpportunityLineItem.Total_Sale_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type_ro__c</field>
        <operation>equals</operation>
        <value>Hardware</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>