unpackaged/main/default/objects/Opportunity/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>