unpackaged/main/default/objects/Opportunity/fields/Indemnity_Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Insurance_Required__c</fullName>
    <description>Some contracts are legally obliged to maintain Indemnity Insurance for around 12 yrs after the end of the contract.</description>
    <inlineHelpText>Select 'Yes' if the contract requires an Indemnity Insurance Policy.</inlineHelpText>
    <label>Indemnity Insurance Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>