unpackaged/main/default/objects/Opportunity/fields/Indemnity_Insurance_Required_Until__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Insurance_Required_Until__c</fullName>
    <description>Field to show when the Indemnity Insurance is required until.</description>
    <inlineHelpText>Please enter the date when the Indemnity Insurance is required until.</inlineHelpText>
    <label>Indemnity Insurance Required Until</label>
    <type>Date</type>
</CustomField>