unpackaged/main/default/objects/Opportunity/fields/Inspire_Project__c.field-meta.xml
<CustomField>
    <fullName>Inspire_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspire Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>