unpackaged/main/default/objects/Opportunity/fields/Invoice_Payable__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is looking up contacts and shall hold the information about the accounts payable person.</description>
    <label>Invoice Payable</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Invoice Payable)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>