unpackaged/main/default/objects/Opportunity/fields/InvoiceComments__c.field-meta.xml
<CustomField>
    <fullName>InvoiceComments__c</fullName>
    <label>Invoicing Comments</label>
    <type>TextArea</type>
</CustomField>