unpackaged/main/default/objects/Opportunity/fields/InvoicePayableEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoicePayableEmail__c</fullName>
    <description>Invoice Payable contact email address</description>
    <formula>Invoice_Payable__r.Email</formula>
    <label>Invoice Payable Email</label>
    <type>Text</type>
</CustomField>