unpackaged/main/default/objects/Opportunity/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <formula>IF(Customer_Invoiced__c,
	IMAGE("/resource/1352889789000/statusprogress4", "Complete"),
	IF(InvoiceStatusPerc__c &gt;= 1, IMAGE("/resource/1352889859000/statusprogress4", "Complete"),
	IF(InvoiceStatusPerc__c &gt; 0.75, IMAGE("/resource/1352889844000/statusprogress3", "Part Complete"),
	IF(InvoiceStatusPerc__c &gt; 0.50, IMAGE("/resource/1352889822000/statusprogress2", "Part Complete"),
	IF(InvoiceStatusPerc__c &gt; 0, IMAGE("/resource/1352889808000/statusprogress1", "Part Complete"),
	IMAGE("/resource/1352889789000/statusprogress0", "Incomplete") ))))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>