unpackaged/main/default/objects/Opportunity/fields/InvoiceStatusPerc__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatusPerc__c</fullName>
    <formula>(Amount - ROUND(TotalAmountOutstanding__c,2))  / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>