unpackaged/main/default/objects/Opportunity/fields/IsAdwords__c.field-meta.xml
<CustomField>
    <fullName>IsAdwords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adwords</label>
    <type>Checkbox</type>
</CustomField>