unpackaged/main/default/objects/Opportunity/fields/IsDassaultKeyAccount__c.field-meta.xml
<CustomField>
    <fullName>IsDassaultKeyAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is account a Dassault key account for dassault Opp scoring</description>
    <label>Dassault Key Account</label>
    <type>Checkbox</type>
</CustomField>