unpackaged/main/default/objects/Opportunity/fields/IsInvoiced__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiced__c</fullName>
    <formula>IF(OR(Customer_Invoiced__c, ROUND(TotalAmountOutstanding__c,2) &lt;=0), 
"TRUE", 
"FALSE"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced</label>
    <type>Text</type>
</CustomField>