unpackaged/main/default/objects/Opportunity/fields/IsSecurityClearanceRequired__c.field-meta.xml
<CustomField>
    <fullName>IsSecurityClearanceRequired__c</fullName>
    <label>Is Security Clearance Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>