unpackaged/main/default/objects/Opportunity/fields/IsTimingPlanProgrammeWorksSupplied__c.field-meta.xml
<CustomField>
    <fullName>IsTimingPlanProgrammeWorksSupplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Paolo Bardi - 005994/0123</description>
    <inlineHelpText>Has a Timing Plan/Programme of Works been supplied?</inlineHelpText>
    <label>Timing Plan/Programme of Works Supplied?</label>
    <type>Checkbox</type>
</CustomField>