unpackaged/main/default/objects/Opportunity/fields/ITAdvocacyPick__c.field-meta.xml
<CustomField>
    <fullName>ITAdvocacyPick__c</fullName>
    <description>Identified and confirmed an influential IT executive who has shared how they will defend a DS decision.</description>
    <inlineHelpText>EXECUTIVE ALIGNMENT: Identified and confirmed an influential IT executive who has shared how they will defend a DS decision.</inlineHelpText>
    <label>ITAdvocacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>