unpackaged/main/default/objects/Opportunity/fields/JLR_3DX_Enablement__c.field-meta.xml
<CustomField>
    <fullName>JLR_3DX_Enablement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For use with the Sales Team to report on all JLR Opps.</description>
    <inlineHelpText>Please ONLY use for Opps with JLR 3DX enablement</inlineHelpText>
    <label>JLR 3DX Enablement</label>
    <type>Checkbox</type>
</CustomField>