unpackaged/main/default/objects/Opportunity/fields/JLRCommericalContactRef__c.field-meta.xml
<CustomField>
    <fullName>JLRCommericalContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JLR Commerical contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (JLR Commerical contact)</relationshipLabel>
    <relationshipName>OpportunitiesContact2</relationshipName>
    <type>Lookup</type>
</CustomField>