unpackaged/main/default/objects/Opportunity/fields/KeyOpp__c.field-meta.xml
<CustomField>
    <fullName>KeyOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>