unpackaged/main/default/objects/Opportunity/fields/LastInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceDate__c</fullName>
    <label>Last Invoice Date</label>
    <summarizedField>Invoice__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.IsInvoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>