unpackaged/main/default/objects/Opportunity/fields/Legacy_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Quote_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Quote Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>